# vnfind

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: config.rs  data.rs  frontend.rs  game.rs  list.rs  log.rs  main.rs  output.rs
www/: default.css  index.html  index.js  katex.css
