[package]
name = "vnfind"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.1"
eframe = { version = "0.29.1"}
egui = "0.29.1"
egui_extras = {version = "0.29.1", features = ["default", "image"] }
log = "0.4.22"
rocket = { version = "0.5.1", features = ["default", "json"] }
serde = { version = "1.0.215", features = ["default", "derive"] }
serde_json = "1.0.132"
